--- a/index.html
+++ b/index.html
@@ -66,6 +66,6 @@
   <body>
     <div id="root"></div>
     <!-- single page app in bundle.js -->
-    <script src="/bundle.js"></script>
+    <script src="__build__/bundle.js"></script>
   </body>
 </html>
