--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
     <title>AMWAM - Amit Shah</title>
     <meta name="description" content="Amit Shah's personal site">
 
@@ -66,6 +67,6 @@
   <body>
     <div id="root"></div>
     <!-- single page app in bundle.js -->
-    <script src="__build__/bundle.js"></script>
+    <script src="/__build__/bundle.js"></script>
   </body>
 </html>
