Added a pre render text to the site

--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
 
   </head>
   <body>
+    <div id="prerender">
+        <h1>AMWAM - Amit Shah</h1>
+        <div><em>Loading...</em></div>
+        <hr />
+        <div>This site requires Javascript to run (sorry)</div>
+    </div>
     <div id="root"></div>
     <!-- single page app in bundle.js -->
     <script src="/__build__/bundle.js"></script>
