--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
     <title>AMWAM - Amit Shah</title>
     <meta name="description" content="Amit Shah's personal site">
-
-    <!-- start favicon -->
+    <style>
+html, body, div, span, a, p, ul, li, h1, code, nav { margin: 0; border: 0; padding: 0; box-sizing: inherit; font: inherit; text-decoration: inherit; text-align: inherit; color: inherit; background: transparent; } body { font-family: helvetica neue, helvetica, sans-serif; font-weight: 300; font-size: 16px; letter-spacing: 0.025em; -webkit-text-size-adjust: none; -moz-text-size-adjust: none; -ms-text-size-adjust: none; text-size-adjust: none; overflow-x: hidden; } #root { min-height: 100vh; } a { -ms-touch-action: manipulation; touch-action: manipulation; color: #d9230f; } li { list-style: none; padding-left: 18px; text-indent: -15px; margin: 0.5vh 0; } li:before { content: "\2013"; padding-right: 7px; } /*title*/ h1 { font-size: 1.7em; margin-bottom: 0.5vh; } #root > div > a { font-size: 14px; } nav { margin: 3vh 0; } p { margin: 3vh 0; line-height: 1.4; } code { font-family: monospace; font-size: 15px; padding-left: 2px; } #root > div > div > div { margin: 1vh 0; } #root > div > div > div > div { margin: 3vh 0; } .social-contact { max-width: 100px; width: 100%; } .social .sub-text-social { color: #808080; text-align: center; } pre { overflow: auto; display: block; padding: 9.5px; margin: 0 0 10px; font-size: 13px; line-height: 1.42857143; color: #333; word-break: break-all; word-wrap: break-word; background-color: #f5f5f5; border: 1px solid #ccc; border-radius: 4px;}
+    </style>
     <link rel="apple-touch-icon" sizes="57x57" href="https://secure.gravatar.com/avatar/8fc4b5f17beaf8893a97c896f68ba084?s=57">
     <link rel="apple-touch-icon" sizes="60x60" href="https://secure.gravatar.com/avatar/8fc4b5f17beaf8893a97c896f68ba084?s=60">
     <link rel="apple-touch-icon" sizes="72x72" href="https://secure.gravatar.com/avatar/8fc4b5f17beaf8893a97c896f68ba084?s=72">
@@ -23,25 +24,7 @@
     <link rel="icon" type="image/png" href="https://secure.gravatar.com/avatar/8fc4b5f17beaf8893a97c896f68ba084?s=192" sizes="192x192">
     <link rel="icon" type="image/png" href="https://secure.gravatar.com/avatar/8fc4b5f17beaf8893a97c896f68ba084?s=16" sizes="16x16">
     <meta name="theme-color" content="#000000">
-    <!-- end favicon -->
-
-    <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
-
-      /////////////////////////////////////////////////////////////////////////
-      // Single Page Apps for GitHub Pages
-      // https://github.com/rafrex/spa-github-pages
-      // Copyright (c) 2016 Rafael Pedicini, licensed under the MIT License
-      // ----------------------------------------------------------------------
-      // This script checks to see if a redirect is present in the query string
-      // and converts it back into the correct url and adds it to the
-      // browser's history using window.history.replaceState(...),
-      // which won't cause the browser to attempt to load the new url.
-      // When the single page app is loaded further down in this file,
-      // the correct url will be waiting in the browser's history for
-      // the single page app to route accordingly.
-      /////////////////////////////////////////////////////////////////////////
-
       (function(l) {
         if (l.search) {
           var q = {};
@@ -59,34 +42,16 @@
         }
       }(window.location))
     </script>
-    <!-- End Single Page Apps for GitHub Pages -->
-
   </head>
   <body>
     <div id="prerender">
-        <h1>AMWAM - Amit Shah</h1>
-        <div><em>Loading...</em></div>
+        <div class="" style="position: absolute; top: 0px; left: 150px; right: 0px; bottom: 0px; overflow: auto; transition: left 0.3s ease-out, right 0.3s ease-out;"><span></span><main id="content" style="display: flex; flex-direction: row; height: 100%; padding: 10px;"><div style="flex: 1 1 0%; height: 100%; margin-top: 50px; float: left;"><h1>AMWAM - Amit Shah</h1><h4>Agile Software Developer, based in London.</h4><div><div><div><ul><li style="padding-bottom: 10px;">Software Engineer @ <a href="https://www.wegotpop.com/">We Got POP Ltd</a></li><li style="padding-bottom: 10px;">Mentor @ <a href="https://codeyourfuture.co/">Code Your Future</a></li><li style="padding-bottom: 10px;">Committer @ <a href="https://github.com/Amwam/">GitHub</a></li><li style="padding-bottom: 10px;">Tweeter @ <a href="https://twitter.com/Amwam/">Twitter</a></li></ul></div></div></div></div></main></div>
         <hr />
-        <div>This site requires Javascript to run (sorry)</div>
     </div>
     <div id="root"></div>
     <noscript id="deferred-styles">
       <link rel="stylesheet" type="text/css" href="/styles/app.css"/>
     </noscript>
-    <script>
-      var loadDeferredStyles = function() {
-        var addStylesNode = document.getElementById("deferred-styles");
-        var replacement = document.createElement("div");
-        replacement.innerHTML = addStylesNode.textContent;
-        document.body.appendChild(replacement)
-        addStylesNode.parentElement.removeChild(addStylesNode);
-      };
-      var raf = requestAnimationFrame || mozRequestAnimationFrame ||
-          webkitRequestAnimationFrame || msRequestAnimationFrame;
-      if (raf) raf(function() { window.setTimeout(loadDeferredStyles, 0); });
-      else window.addEventListener('load', loadDeferredStyles);
-    </script>
-    <!-- single page app in bundle.js -->
     <script async src="/__build__/bundle.js"></script>
   </body>
 </html>
