Convert to typescript

--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,6 @@ code[class*=language-],pre[class*=language-]{color:#000;background:0 0;text-shad
         <hr />
     </div>
     <div id="root"></div>
-    <script async src="./index.jsx"></script>
+    <script async src="./index.tsx"></script>
   </body>
 </html>
