Refactor some styling

--- a/src/index.html
+++ b/src/index.html
@@ -231,6 +231,7 @@
       })(window.location);
     </script>
   </head>
+
   <body>
     <div id="prerender">
       <div
@@ -238,13 +239,8 @@
         style="position: absolute; top: 0px; left: 150px; right: 0px; bottom: 0px; overflow: auto; transition: left 0.3s ease-out, right 0.3s ease-out;"
       >
         <span></span>
-        <main
-          id="content"
-          style="display: flex; flex-direction: row; height: 100%; padding: 10px;"
-        >
-          <div
-            style="flex: 1 1 0%; height: 100%; margin-top: 50px; float: left;"
-          >
+        <main id="content">
+          <div class="title">
             <h1>AMWAM - Amit Shah</h1>
             <h4>Agile Software Developer, based in London.</h4>
             <div>
