Update job title

--- a/src/index.html
+++ b/src/index.html
@@ -248,7 +248,7 @@
                 <div>
                   <ul>
                     <li style="padding-bottom: 10px;">
-                      Software Engineer @
+                      Lead Developer @
                       <a href="https://www.wegotpop.com/">We Got POP Ltd</a>
                     </li>
                     <li style="padding-bottom: 10px;">
