Make the stylesheet async

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     />
     <title>AMWAM - Amit Shah</title>
     <meta name="description" content="Amit Shah's personal site" />
-    <link rel="stylesheet" href="./index.css" />
+    <link async rel="stylesheet" href="./index.css" />
     <style>
       /* Prism theme */
       code[class*='language-'],
