--- a/src/index.html
+++ b/src/index.html
@@ -256,12 +256,10 @@
                       <a href="https://codeyourfuture.co/">Code Your Future</a>
                     </li>
                     <li style="padding-bottom: 10px;">
-                      Committer @
-                      <a href="https://github.com/Amwam/">GitHub</a>
+                      Committer @ <a href="https://github.com/Amwam/">GitHub</a>
                     </li>
                     <li style="padding-bottom: 10px;">
-                      Tweeter @
-                      <a href="https://twitter.com/Amwam/">Twitter</a>
+                      Tweeter @ <a href="https://twitter.com/Amwam/">Twitter</a>
                     </li>
                   </ul>
                 </div>
