--- a/src/index.html
+++ b/src/index.html
@@ -204,18 +204,15 @@
     />
     <meta name="theme-color" content="#000000" />
     <script type="text/javascript">
-      (function(l) {
+      (function (l) {
         if (l.search) {
           var q = {};
           l.search
             .slice(1)
             .split('&')
-            .forEach(function(v) {
+            .forEach(function (v) {
               var a = v.split('=');
-              q[a[0]] = a
-                .slice(1)
-                .join('=')
-                .replace(/~and~/g, '&');
+              q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&');
             });
           if (q.p !== undefined) {
             window.history.replaceState(
@@ -236,7 +233,15 @@
     <div id="prerender">
       <div
         class=""
-        style="position: absolute; top: 0px; left: 150px; right: 0px; bottom: 0px; overflow: auto; transition: left 0.3s ease-out, right 0.3s ease-out;"
+        style="
+          position: absolute;
+          top: 0px;
+          left: 150px;
+          right: 0px;
+          bottom: 0px;
+          overflow: auto;
+          transition: left 0.3s ease-out, right 0.3s ease-out;
+        "
       >
         <span></span>
         <main id="content">
